[package]
name = "serde_yaml-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.2.3", features = ["derive"] }
libfuzzer-sys = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = { path = ".."}

[[bin]]
name = "fuzz_from_slice"
path = "fuzz_targets/fuzz_from_slice.rs"
test = false
doc = false

[workspace]

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false
