[package]
name = "serde_yaml"
version = "0.4.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "YAML support for Serde"
repository = "https://github.com/dtolnay/serde-yaml"
documentation = "https://dtolnay.github.io/serde-yaml/"
readme = "../README.md"
keywords = ["yaml", "serde"]

[dependencies]
clippy = { version = "^0.*", optional = true }
dtoa = "0.2"
linked-hash-map = { version = "0.3", features = ["serde_impl"] }
serde = "0.8"
yaml-rust = { path = "../../yaml-rust", version = "^0.3.3", features = ["preserve_order"] }
