[package]
name = "serde_yaml"
version = "0.5.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "YAML support for Serde"
repository = "https://github.com/dtolnay/serde-yaml"
documentation = "https://docs.rs/serde_yaml/"
readme = "../README.md"
keywords = ["yaml", "serde"]

[dependencies]
clippy = { version = "^0.*", optional = true }
dtoa = "0.3"
linked-hash-map = { version = "0.3", features = ["serde_impl"] }
serde = "0.8.12"
yaml-rust = { version = "^0.3.4", features = ["preserve_order"] }
