[package]
name = "serde_yaml"
version = "0.6.0-rc1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "YAML support for Serde"
repository = "https://github.com/dtolnay/serde-yaml"
documentation = "https://docs.rs/serde_yaml/"
readme = "../README.md"
keywords = ["yaml", "serde"]

[dependencies]
clippy = { version = "0.*", optional = true }
linked-hash-map = "0.3"
serde = "0.9.2"
yaml-rust = { version = "0.3.5", features = ["preserve_order"] }
