[package]
name = "yamlformat_derive"
version = "0.0.0"
authors = ["Chris Frantz <frantzcj@gmail.com>"]
edition = "2018"
#rust-version = "1.38"
license = "MIT OR Apache-2.0"
description = "YAML format for serde-yaml"
keywords = ["yaml", "serde"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = {version="1.0", features=["extra-traits"]}
